--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    h1{
+        @apply text-4xl font-semibold;
+    }
+    p, input{
+        @apply text-sm;
+    }
+}
